--- a/week4/Loan/nbproject/private/private.properties
+++ b/week4/Loan/nbproject/private/private.properties
@@ -1,2 +1,6 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\SoftwareDev\\AppData\\Roaming\\NetBeans\\8.1beta\\build.properties
+do.depend=false
+do.jar=true
+javac.debug=true
+javadoc.preview=true
+user.properties.file=C:\\Users\\t00126681\\AppData\\Roaming\\NetBeans\\8.0\\build.properties
